Fixed the spacing between the subtitles

--- a/content/static/css/_agenda.scss
+++ b/content/static/css/_agenda.scss
@@ -109,6 +109,7 @@
 						font-style: italic;
 						text-align: justify;
 						padding: 0 0 10px 0;
+						line-height: 1.5;
 					}
 
 					.name {
@@ -123,6 +124,7 @@
 							font-weight: normal;
 							padding-top: 5px;
 							text-align: justify;
+							line-height: 1.5;
 						}
 
 						.profile {
